Fix word wrap in files to send list

--- a/chat/static/style.css
+++ b/chat/static/style.css
@@ -398,7 +398,7 @@ html, body {
 
 #filesUploadedList {
     list-style: none;
-    word-break: break-word;
+    word-wrap: break-word;
 }
 
 .btn-circle {
